--- a/src/templates/Body_Admin.html
+++ b/src/templates/Body_Admin.html
@@ -15,5 +15,6 @@
 			<#? content ?#>
 		</div>
 	</section>
+	<script>const ActiveUser = JSON.parse(`<#? activeuser ?#>`);</script>
 	<script src="/admin.js" id="admin_js"></script>
 </div>
