--- a/src/templates/Navigation_Admin.html
+++ b/src/templates/Navigation_Admin.html
@@ -2,17 +2,17 @@
 	<div class="navigation">
 		<a goto="/admin/home">
 			<span class='icon'>&#xfe8a;</span>
-			<span>Home</span>
+			<span><$ home title /></span>
 		</a>
 		<a goto="/admin/courses">
 			<span class='icon'>&#xed8a;</span>
-			<span>Courses</span>
+			<span><$ courses title /></span>
 		</a>
 	</div> 
 	<div class="footer">
 		<a goto="/admin/settings">
 			<span class='icon'>&#xf337;</span>
-			<span>Settings</span>
+			<span><$ settings title /></span>
 		</a>
 		<a goto="/admin/settings/">
 			<img class="icon" src="/avatar/<#? activeuser.id ?#>"/>
@@ -25,15 +25,15 @@
 	<span class="navigation">	
 		<a goto="/admin/home">
 			<span class='icon'>&#xfe8b;</span>
-			<span>Home</span>
+			<span><$ home title /></span>
 		</a>
 		<a goto="/admin/courses">
 			<span class='icon'>&#xed89;</span>
-			<span>Courses</span>
+			<span><$ courses title /></span>
 		</a>
 		<a goto="/admin/settings">
 			<span class='icon'>&#xf337;</span>
-			<span>Settings</span>
+			<span><$ settings title /></span>
 		</a>
 	</span> 
 </section>
