--- a/public/problems.css
+++ b/public/problems.css
@@ -23,6 +23,7 @@
     #Grid_Print
     {
         display: grid;
+        print-color-adjust: exact;
     }
 }
 @media screen
@@ -39,13 +40,14 @@
     {
         display: grid;
         position: relative;
-        width: 100%;
+        width: 100vw;
         height: 100vh;
         background: #015850;
         padding: 70px;
         color: white;
         gap: 50px;
         grid-auto-rows: max-content auto max-content;
+        break-after: page;
     
         .logo
         {
@@ -77,28 +79,16 @@
             {
                 display: grid;
                 grid-auto-rows: max-content;
-                gap: 0.25em;
+                gap: 0.5em;
                 margin-top: 50px;
                 font-size: 3em;
                 font-family: var(--font-semibold);
+                line-height: 1;
                 color: #ccffcc;
             }
             .topics:has(span)
             {
                 counter-reset: topic;
-
-                span
-                {
-                    display: grid;
-                    grid-auto-flow: column;
-                    grid-auto-columns: 1.25em auto;
-                }
-                
-                span::before
-                {
-                    counter-increment: topic;
-                    content: counter(topic) ".";
-                }
             }
         }
     
@@ -115,7 +105,7 @@
         
         section
         {
-            page-break-before: always;
+            break-before: page;
         }  
         h3
         {
@@ -124,11 +114,12 @@
     }
     .backcover
     {
-        page-break-before: always;
+        break-before: page;
+        break-after: page;
         display: grid;
         grid-auto-rows: max-content auto max-content;
         width: calc(100% - 140px);
-        height: calc(100vh - 150px);
+        height: calc(100vh - 160px);
 
         .logo
         {
@@ -152,6 +143,10 @@
     display: grid;
     grid-auto-rows: max-content auto;
 }
+#Activity_Topic > .content:has(.notfound)
+{
+    grid-auto-rows: auto;
+}
 #Grid_CourseProblems, #Grid_PrintContent
 {
     display: grid;
@@ -159,6 +154,11 @@
     gap: 10px;
     margin: var(--padding) 0 0;
     counter-reset: problem;
+}
+#Grid_PrintContent
+{
+    display: block;
+    margin: 0;
 }
 #Grid_CourseProblems:has(.progressring) 
 {
@@ -191,6 +191,18 @@
         font-size: 1.12em;
         color: var(--foreground-description);
     }
+#Grid_CourseProblems.notfound:empty
+{    
+    height: 100%;
+}
+    #Grid_CourseProblems.notfound:empty::before
+    {
+        content: "Topic Not Found";
+    }
+    #Grid_CourseProblems.notfound:empty::after
+    {
+        content: "It may have been moved or deleted.";
+    }
     #Grid_PrintContent section
     {
         counter-reset: problem;
@@ -198,10 +210,7 @@
     :where(#Grid_CourseProblems, #Grid_PrintContent) .group
     {
         display: grid;
-        gap: 1em;
-    }
-    :where(#Grid_CourseProblems, #Grid_PrintContent) .group:not(:has(.problem)) {
-        display: none;
+        gap: 1em;   
     }
         :where(#Grid_CourseProblems, #Grid_PrintContent) .group .details
         {
@@ -226,7 +235,8 @@
             grid-auto-columns: max-content auto;
             gap: 0.5em;
             font-size: 1.15em;
-            line-height: 1.35em;
+            line-height: 1.75em;
+            align-items: baseline;
         }
             :where(#Grid_CourseProblems, #Grid_PrintContent) .group .problem::before
             {
@@ -236,22 +246,29 @@
             .pivot:has(.section > textarea) .section .preview,
             :where(#Grid_CourseProblems, #Grid_PrintContent) .group .problem .text
             {
+                display: grid;
+                grid-auto-rows: max-content;
+                gap: 1em;
+
                 *
                 {
                     user-select: text;
                 }
 
-                > *:first-child
+                > *
                 {
-                    margin-top: 0;
+                    margin: 0;
                 }
                 ul
                 {
+                    display: grid;
+                    grid-auto-rows: max-content;
                     padding-inline-start: 1em;
+                    gap: 0.5em;
 
                     li
                     {
-                        margin: 0.25em 0 0;
+                        margin: 0;
                     }
                 }
                 table, th, td 
@@ -266,13 +283,11 @@
                 }
                 mjx-container 
                 {
-                    display: inline-block;
-                    margin: 0;
+                    display: inline;
+                    margin: 0 -50px;
+                    padding: 0 50px;
+                    overflow-x: auto;
+                    overflow-y: hidden;
+                    scrollbar-width: none;
                 }
-            }
-            .pivot:has(.section > textarea) .section .preview
-            {
-                padding: 1em;
-                font-size: 1.15em;
-                line-height: 1.35em;
             }
