--- a/src/templates/Navigation.html
+++ b/src/templates/Navigation.html
@@ -3,27 +3,27 @@
 	<div class="navigation">
 		<a goto="/home">
 			<span class='icon'>&#xfe8a;</span>
-			<span>Home</span>
+			<span><$ home title /></span>
 		</a>
 		<a goto="/courses">
 			<span class='icon'>&#xed8a;</span>
-			<span>Courses</span>
+			<span><$ courses title /></span>
 		</a>
-		<div class="separator">Pinned Courses</div>
+		<div class="separator"><$ courses pinned /></div>
 		<a goto="/pins">
 			<span class='icon'>&#xf892;</span>
-			<span>All Pins</span>
+			<span><$ courses pinned_all /></span>
 		</a>
 		<div id="Grid_PinnedCourses"></div>
 	</div> 
 	<div class="footer">
 		<a goto="/help">
 			<span class='icon'>&#xf95f;</span>
-			<span>Help</span>
+			<span><$ help title /></span>
 		</a>
 		<a goto="/settings">
 			<span class='icon'>&#xf337;</span>
-			<span>Settings</span>
+			<span><$ settings title /></span>
 		</a>
 	</div>
 </section>
@@ -32,19 +32,19 @@
 	<span class="navigation">
 		<a goto="/home">
 			<span class='icon'>&#xfe8b;</span>
-			<span>Home</span>
+			<span><$ home title /></span>
 		</a>
 		<a goto="/courses">
 			<span class='icon'>&#xed89;</span>
-			<span>Courses</span>
+			<span><$ courses title /></span>
 		</a>
 		<a goto="/help">
 			<span class='icon'>&#xf95e;</span>
-			<span>Help</span>
+			<span><$ help title /></span>
 		</a>
 		<a goto="/settings">
 			<span class='icon'>&#xf337;</span>
-			<span>Settings</span>
+			<span><$ home title /></span>
 		</a>
 	</span> 
 </section>
