--- a/src/templates/Head.html
+++ b/src/templates/Head.html
@@ -3,7 +3,7 @@
 <meta content="#000000" ad-theme-color name="theme-color"> 
 <meta content="#000000" ad-theme-color name="apple-mobile-web-app-status-bar-style"> 
 <link rel="stylesheet" type="text/css" href="<#? appassets ?#>/ui/v3/style.css" />
-<link rel="stylesheet" type="text/css" href="/style.css" />
+<link rel="stylesheet" type="text/css" href="/<#? applang ?#>/style.css" />
 <link rel="icon" href="<#? appicon ?#>" />
 <title ad-app-title="<#? apptitle ?#>"><#? apptitle ?#></title>
 <#? hreflang ?#>
