Patched some issues
- Added letter list
- Added auto-refresh for topic details when a problem is submitted or deleted
- Fixed sorting issue
- Fixed grouping issue

--- a/public/admin.css
+++ b/public/admin.css
@@ -11,6 +11,7 @@
         position: relative;
         transition: 0.05s background;
         padding: 0;
+        z-index: 1;
     }
     :where(#PopOver_NewCourse, #PopOver_EditCourse) .list .banner:hover
     {
