--- a/src/templates/Body_Admin.html
+++ b/src/templates/Body_Admin.html
@@ -1,5 +1,6 @@
 <script src="https://cdn.jsdelivr.net/npm/mathjax@3.2.2/es5/tex-mml-chtml.min.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/marked@16.1.1/lib/marked.umd.min.js"></script>
+<script src="https://cdn.jsdelivr.net/npm/marked-more-lists/lib/index.umd.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.17.1/moment-with-locales.min.js"></script>
 <script src="/<#? applang ?#>/script.js"></script>
 <header class="titlebar">
