--- a/src/templates/Navigation_Admin.html
+++ b/src/templates/Navigation_Admin.html
@@ -15,7 +15,7 @@
 			<span><$ settings title /></span>
 		</a>
 		<a goto="/admin/settings/">
-			<img class="icon" src="/avatar/<#? activeuser.id ?#>"/>
+			<img class="icon" src="/avatar/<#? activeuser.id ?#>?v=<#? activeuser.avatarversion ?#>"/>
 			<span><#? activeuser.nickname ?#></span>
 		</a>
 	</div>
