--- a/public/courses.css
+++ b/public/courses.css
@@ -136,29 +136,32 @@
         right: 0;
         bottom: 0;
         z-index: -1;
+        background-size: cover;
+        background-position: center;
     }
     #Grid_CourseCard::before
     {   
-        background-image: var(--image);
-        background-size: cover;
-        background-position: center;
-        filter: brightness(0.7);
-        animation: 1s var(--key-animation) BackgroundIn;
-    }
-    #Grid_CourseCard.hasBanner::before
-    {   
-        animation: 1s var(--key-animation) BackgroundIn;
+        background-image: var(--blur);    
+        transform: scale(1.3);
+        filter: brightness(0.5);
     }
     #Grid_CourseCard::after
     {   
-        background-image: linear-gradient(transparent, rgba(0, 0, 0, 0.5));
+        background-image: var(--image);
+        filter: brightness(0.7);
+        mask-image: linear-gradient(0, transparent 15%, black 50%);
+        -webkit-mask-image: linear-gradient(0, transparent 15%, black 50%);
+    }
+    #Grid_CourseCard.hasBanner::after
+    {   
+        animation: 0.8s var(--key-animation) BackgroundIn;
     }
     @keyframes BackgroundIn
     {
-        0% 
+        0%, 10%
         { 
             opacity: 0;
-            transform: scale(1.1);
+            transform: scale(1.05);
         }
     }
     #Grid_CourseCard > h3
