--- a/src/templates/Body.html
+++ b/src/templates/Body.html
@@ -12,7 +12,7 @@
 		<#? navigation ?#>
 	</nav>
 	<section class="main">
-		<div class="activity">
+		<div class="activity" id="Activity_Main">
 			<#? content ?#>
 		</div>
 	</section>
