--- a/public/quiz.css
+++ b/public/quiz.css
@@ -1,3 +1,7 @@
+.root .main
+{
+    background: inherit;
+}
 #Activity_Main
 {
     position: relative;
@@ -115,7 +119,8 @@
     grid-auto-rows: max-content max-content auto 100px;
     justify-items: center;
     align-content: space-evenly;
-    align-items: end;
+    align-items: end;        
+    gap: 1.5em;
 }
     #Content_Ready .about
     {
@@ -126,14 +131,33 @@
         #Content_Ready .about .name
         {
             display: grid;
-            font-size: 2em;
+            font-size: 3em;
             font-family: var(--font-bold);
             text-align: center;
+            line-height: 1;
         }
             #Content_Ready .about .name span:last-child
             {
                 opacity: 0.5;
             }
+        #Content_Ready .about button
+        {
+            padding: 0;
+        }
+    #Content_Ready .metadata
+    {
+        display: grid;
+        gap: 1em;
+        font-size: 1.15em;
+        margin-top: var(--padding);
+    }
+        #Content_Ready .metadata > div
+        {
+            display: grid;
+            grid-auto-flow: column;
+            grid-auto-columns: max-content auto;
+            gap: 1em;
+        }
     #Content_Ready #Grid_Status
     {
         display: grid;
@@ -148,18 +172,40 @@
             width: 200px;
             height: 5px;
         }
-    #Content_Ready #Button_Start
+    #Content_Ready #Grid_Buttons
     {
-        min-width: 200px;
-        font-size: 1.25em;
-        padding: 10px;
+        display: grid;
     }
+        #Content_Ready #Grid_Buttons button
+        {
+            min-width: 200px;
+            font-size: 1.25em;
+            padding: 10px;
+        }
+
+@media screen and (max-width: 425px) 
+{
+    #Content_Ready
+    {
+        align-content: stretch;
+        justify-items: stretch;
+        margin-top: -55px;
+        padding: 30px;
+    }    
+        #Content_Ready .about
+        {
+            justify-items: left; 
+        }
+            #Content_Ready .about .name
+            {
+                text-align: left; 
+            }
+}
 
 #Content_Quiz
 {
     display: grid;
     grid-auto-rows: max-content auto max-content;
-    overflow: hidden;
 }
 
 #Grid_QuizContainer
@@ -167,12 +213,7 @@
     display: grid;
     grid-auto-rows: max-content;
     gap: 1.5em;
-    overflow-x: hidden;
-    overflow-y: auto;
-    padding: 1.5em 30px;
-    margin: 0 -30px;
-    mask-image: linear-gradient(transparent, black 1.5em, black calc(100% - 1.5em), transparent);
-    -webkit-mask-image: linear-gradient(transparent, black 1.5em, black calc(100% - 1.5em), transparent);
+    padding-bottom: 1em;
 }
 
 #Text_Question
@@ -181,6 +222,10 @@
     line-height: 1.5em;
     align-items: baseline;
 }
+    #Text_Question *
+    {
+        user-select: none;
+    }
 
 #Grid_Choices
 {
@@ -193,19 +238,26 @@
     #Grid_Choices .choice
     {
         display: grid;
-        grid-auto-flow: column;
+        grid-template-areas: "number text";
         grid-auto-columns: max-content auto;
-        background: var(--background-list);
+        background: var(--background-input);
         border-radius: 10px;
-        overflow-x: hidden;
-        overflow-y: auto;
+        overflow: hidden;
         counter-increment: choice;
         align-items: baseline;
         padding: 13px 15px;
         gap: 15px;
+        transition: 0.1s background, 0.1s background-image;
+    }
+    #Grid_Choices .choice:has(.reason)
+    {
+        grid-template-areas: 
+            "number text"
+            "x reason";
     }
         #Grid_Choices .choice::before
         {
+            grid-area: number;
             content: counter(choice, upper-alpha);
             display: grid;
             font-family: var(--font-bold);
@@ -227,6 +279,34 @@
             background: white;
             color: var(--accent);
         }
+        #Grid_Choices .choice.wrong::before
+        {
+            background: white;
+            content: "\fe72";
+            font-family: var(--font-icon);
+            font-size: 0.6em;
+            font-weight: bold;
+            color: #cc0000;
+        }
+        #Grid_Choices .choice.correct::before
+        {
+            background: white;
+            content: "\ef32";
+            font-family: var(--font-icon);
+            font-size: 0.6em;
+            font-weight: bold;
+            color: #008800;
+        }
+    #Grid_Choices .choice.correct
+    {
+        background: #008800;
+        color: white;
+    }
+    #Grid_Choices .choice.wrong
+    {
+        background: #cc0000;
+        color: white;
+    }
     #Grid_Choices .choice:hover
     {
         background-image: linear-gradient(var(--background-list-hover));
@@ -235,19 +315,31 @@
     {
         background-image: linear-gradient(var(--background-list-active));
     }
-        #Grid_Choices .choice .text
+        #Grid_Choices .choice .text,
+        #Grid_Choices .choice .reason
         {
+            grid-area: text;
             display: grid;
-            grid-auto-flow: column;
             grid-auto-rows: max-content;
             gap: 0.5em;
             justify-content: start;
             align-items: baseline;
+            
         }
-        #Grid_Choices .choice *
+        #Grid_Choices .choice *,
+        #Grid_Choices .reason *
         {
-            margin: 0;
-            padding: 0;
+            user-select: none;
+        }
+        #Grid_Choices .choice .reason
+        {
+            grid-area: reason;
+            background: rgba(0, 0, 0, 0.2);
+            border-top: 1px solid var(--border-context);
+            margin: 0 -100px -50px;
+            padding: 20px 100px 70px;
+            overflow: hidden;
+            overflow-x: auto;
         }
 
 #Grid_Navigation
@@ -255,10 +347,17 @@
     display: grid;
     grid-auto-flow: column;
     grid-auto-columns: max-content auto max-content;
+    grid-auto-rows: max-content;
+    padding: 0.5em 0 var(--padding);
+    margin-bottom: calc(var(--padding) * -1);
     gap: 15px;
+    align-self: end;
+    position: sticky;
+    bottom: 0;
+    background: var(--background-page);
 }
     #Grid_Navigation button
     {
-        font-size: 1.2em;
-        padding: 10px 30px; 
+        font-size: 1em;
+        padding: 8px 25px;
     }
