--- a/public/courses.css
+++ b/public/courses.css
@@ -43,9 +43,10 @@
         grid-auto-columns: 100%;
         grid-auto-rows: 150px max-content max-content auto;
         height: 350px;
-        background: rgba(0, 0, 0, 0.045);
+        background: #f3f3f3;
         border-radius: 10px;
         overflow: hidden;
+        box-shadow: 0 0 10px -7px;
     }
     [theme=dark] #Grid_Courses .course 
     {
@@ -90,6 +91,7 @@
             bottom: 0;
             z-index: 1;
             pointer-events: none;
+            transition: 0.05s background;
         }
         #Grid_Courses .course:hover .hover
         {
@@ -122,7 +124,7 @@
     margin: -100px calc(var(--padding) * -1) var(--padding);
     padding: 100px var(--padding) var(--padding);
     min-height: 400px;
-    z-index: 11;
+    z-index: 0;
     overflow: hidden;
 }
     #Grid_CourseCard::before,
@@ -184,6 +186,7 @@
         margin: -0.2em -0.5em;
         padding: 0.2em 0.5em;
         border-radius: 10px;
+        transition: 0.05s background;
     }
     #Grid_CourseCard > span:hover
     {
@@ -297,6 +300,7 @@
         padding: 0.75em 1em;
         margin: 0 -1em;
         border-radius: 10px;
+        transition: 0.05s background-color;
     }
     #Grid_CourseTopics .topic.dragging
     {
@@ -308,13 +312,13 @@
     }
     #Grid_PrintCourseTopics .topic
     {
-        padding-left: calc(1.5em + 18px);
+        padding-left: calc(var(--padding) * 2 + 18px);
     }
         #Grid_PrintCourseTopics .InputContainer_Checkbox
         {
             position: absolute;
             top: 50%;
-            left: 0.75em;
+            left: var(--padding);
             transform: translateY(-50%);
             pointer-events: none;
         }
@@ -335,7 +339,7 @@
         }
         #Grid_PrintCourseTopics .topic:not(:last-child)::before
         {
-            left: calc(1.5em + 18px);
+            left: calc(var(--padding) * 2 + 18px);
         }
     #Grid_CourseTopics .topic.active
     {
