--- a/src/templates/Navigation.html
+++ b/src/templates/Navigation.html
@@ -1,4 +1,5 @@
 <section class="desktop">
+	<input type="search" placeholder="<$ search title />" id="Input_SearchGlobal" autocomplete="off"/>
 	<div class="navigation">
 		<a goto="/home">
 			<span class='icon'>&#xfe8a;</span>
@@ -28,6 +29,10 @@
 		<a goto="/courses">
 			<span class='icon'>&#xed89;</span>
 			<span><$ courses title /></span>
+		</a>
+		<a goto="/search">
+			<span class='icon'>&#xf664;</span>
+			<span><$ search title /></span>
 		</a>
 		<a goto="/settings">
 			<span class='icon'>&#xf337;</span>
